--- a/_pages/cityguides/index.html
+++ b/_pages/cityguides/index.html
@@ -6,5 +6,5 @@ nav: true
 nav-order: 2
 
 title: City&shy;guides
-intro: Legg ut på et urbant designeventyr som tar deg fra soloppgang til solnedgang. Oppdag steder som er skapt for designelskere i Bergen og Olso.
+intro: Legg ut på et urbant designeventyr som tar deg fra soloppgang til soloppgang. Oppdag steder som er skapt for designelskere i Bergen og Olso.
 ---
