--- a/_pages/designhoteller/index.html
+++ b/_pages/designhoteller/index.html
@@ -15,7 +15,7 @@ features:
   - id: pumphouse-point-hotel
     title: Pumphouse Point Hotel
     location: Tasmania, Australia
-    description: En hvit boks omringet av stemningen til det blå havet; dette er Pumphouse Point Hotel, en gammel vannkraftstasjon fra 30-tallet som ligger i en vakker innsjø. Det å vandre over den lange broen frem til hotellet, er i seg selv en opplevelse. Interiøret viser sine industrielle røtter og blander seg umerkbart inn med det moderne. Utsikten er utrolig og følelsen av å være her ute, isolert i naturens skjønnhet, er helt uforglemmelig.
+    description: En hvit boks omringet av stemningen til det blå havet; dette er Pumphouse Point Hotel, en gammel vannkraftstasjon fra 30-tallet som ligger på en vakker innsjø. Det å vandre over den lange broen frem til hotellet, er i seg selv en opplevelse. Interiøret viser sine industrielle røtter og blander seg umerkbart inn med det moderne. Utsikten er utrolig og følelsen av å være her ute, isolert i naturens skjønnhet, er helt uforglemmelig.
 
   - id: treehotel
     title: Treehotel
@@ -30,7 +30,7 @@ features:
   - id: fogo-island-inn
     title: Fogo Island Inn
     location: Newfoundland, Canada
-    description: På Newfoundlands værbårne kant finner du en slående bygning på stolper som skriker moderne design; dette er Fogo Island Inn. Fiskerlandsbyen som ligger i nærheten er litt av en kontrast til denne utrolige arkitekturen, men forholdet deres er svært godt. Samfunnet hjelper hotellet like mye som hotellet hjelper dem. Kjøkkenet er avhengig av de lokale fiskerne og gjester kan få utflukter med en lommekjent guide. Hvert eneste rom har havutsikt fra gulv til tak, og det moderne designet gir deg en følelse av å være om bord i et hipt cruiseskip.
+    description: På Newfoundlands værharde kant finner du en slående bygning på stolper som skriker moderne design; dette er Fogo Island Inn. Fiskerlandsbyen som ligger i nærheten er litt av en kontrast til denne utrolige arkitekturen, men forholdet deres er svært godt. Samfunnet hjelper hotellet like mye som hotellet hjelper dem. Kjøkkenet er avhengig av de lokale fiskerne og gjester kan få utflukter med en lommekjent guide. Hvert eneste rom har havutsikt fra gulv til tak, og det moderne designet gir deg en følelse av å være om bord i et hipt cruiseskip.
 
   - id: the-beekman
     title: The Beekman
@@ -40,7 +40,7 @@ features:
   - id: bisate-lodge
     title: Bisate Lodge
     location: Ruhengeri, Rwanda
-    description: I den spennende jungelen av Rwanda, langs sidene av en vulkansk kjegle, ligger en rekke hytter med stråtak og holder utsikt over dalen. Designet er inspirert av det kongelige palasset ved Nyanza og spiller på landets egen kulturarv. På innsiden venter en vakker utsikt over fjellene og jungelen, ildsteder i vulkansk stein, håndvevde tepper og jordnære toner som en gjennomgående rød tråd. Dette er pur luksus, men hotellet har også passet på miljøet, slik at du kan oppdage Rwandas vakre landskap med omtanke for naturen.
+    description: I den spennende jungelen i Rwanda, langs sidene av en vulkansk kjegle, ligger en rekke hytter med stråtak og holder utsikt over dalen. Designet er inspirert av det kongelige palasset ved Nyanza og spiller på landets egen kulturarv. På innsiden venter en vakker utsikt over fjellene og jungelen, ildsteder i vulkansk stein, håndvevde tepper og jordnære toner som en gjennomgående rød tråd. Dette er pur luksus, men hotellet har også passet på miljøet, slik at du kan oppdage Rwandas vakre landskap med omtanke for naturen.
 
   - id: mashpi-lodge
     title: Mashpi Lodge
