--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -31,22 +31,22 @@ features:
 
   - id: self-charge
     title: Ingen lading. Ingen diesel. Ingen kompromisser.
-    description: Lexus&nbsp;UX lader seg selv mens du kjører, så du trenger aldri å koble den inn noe sted. Det betyr at du får en helgetur helt uten avbrytelser. Du kjører med den fjerde generasjonens selvladende hybriden til Lexus, med automatgir som har en 2.0-liters, firesylindret bensinmotor, kraftfull el-motor og nyutviklet hybridteknologi.
+    description: Lexus&nbsp;UX lader mens du kjører, så du trenger aldri plugge den i noe sted. Det betyr for eksempel helgeturer uten avbrytelser. UX har fjerde generasjon av vår selvladende hybridteknologi, med en effektiv 2.0-liters bensinmotor, en kraftig el-motor og automatgir.
     link: https://www.lexus.no/car-models/ux/#hero
 
   - id: performance
     title: Kraftig ytelse
-    description: Sett deg til rette med fullstendig oversikt og upåklagelig utsyn i denne moderne crossoveren. Med lavt tyngdepunkt og en stødig kropp byr UX på hårfin kjøredynamikk som du ikke forventer av en SUV. Nye Lexus&nbsp;UX kombinerer E-FOUR All Wheel Drive-ytelse med neste generasjons effektivitet og når inntil 0,41 per mil – perfekt for å spare noen kroner på en helgetur.
+    description: Sett deg godt til rette med full oversikt og upåklagelig utsyn i denne moderne crossoveren. Med lavt tyngdepunkt og en ny, stiv plattform har nye Lexus&nbsp;UX kjøreegenskaper du ikke forventer av en SUV. UX er dessuten den eneste hybriden i klassen som fås med firehjulstrekk – perfekt for deg som vil komme fram overalt med lavt forbruk.
     link: https://www.lexus.no/car-models/ux/#hero
 
   - id: design
     title: Intelligent design
-    description: Lexus&nbsp;UX er dramatisk og full av personlighet. Med sin dramatiske signaturgrill, den sporty silhuetten og bakendens distinkte design, sørger for at folk kommer til å snu seg når du passerer – dette er en helt ny crossover som er bygd for å utforske urbane omgivelser.
+    description: Lexus&nbsp;UX har en design full av personlighet. Med en iøynefallende signaturgrill, sporty silhuett og en bakende med en svært distinkt utforming, kommer folk til å snu seg etter den når du passerer. UX er en ny generasjon crossover, utmerket for å utforske urbane omgivelser.
     link: https://www.lexus.no/car-models/ux/#hero
 
   - id: city
     title: Perfekt for byen
-    description: Designet er basert på det japanske arkitektoniske konseptet 'Engawa', der grensene mellom innendørs og utendørs sømløst føres sammen. I dette luksuriøse og sjåfør-fokuserte miljøet vil den romslige og trygge følelsen gjøre det enkelt å bevege seg rundt i byen.
+    description: Designen er basert på det japanske arkitekturkonseptet 'Engawa', der grensene mellom innendørs og utendørs føres sømløst sammen. I dette luksuriøse og sjåfør-fokuserte miljøet vil den romslige og trygge følelsen gjøre det enkelt å bevege seg rundt i byen.
     link: https://www.lexus.no/car-models/ux/#hero
 
   - id: technology
@@ -56,7 +56,7 @@ features:
 
   - id: saftey
     title: Forsett med selvtillit
-    description: I det nye Lexus Safety System+, har UX en utrolig omfattende forebyggende sikkerhetspakke, inkludert filassistanse, kollisjonsvernsystem og dynamisk cruisekontroll med skiltlesningassistanse. Lexus Safety System +, gjør at du kan føle deg selvsikker og trygg på reisen din.
+    description: I det nye Lexus Safety System+, har Lexus&nbsp;UX en utrolig omfattende forebyggende sikkerhetspakke, inkludert filassistanse, kollisjonsvernsystem og dynamisk cruisekontroll med skiltlesningassistanse. Lexus Safety System +, gjør at du kan føle deg selvsikker og trygg på reisen din.
     link: https://www.lexus.no/car-models/ux/#hero
 
   - id: config
