--- a/_pages/city-guides/berlin/index.html
+++ b/_pages/city-guides/berlin/index.html
@@ -30,7 +30,7 @@ features:
   - id: metropolen-gefuhl-am-potsdamer-platz
     time: "12:00"
     place: Metropolen-Gefühl am Potsdamer Platz
-    title: Auf zum Potsdamer Platz.
+    title: Auf zum Potsdamer Platz
     description: >
       Auf zum Potsdamer Platz. Hier versprüht Berlin tatsächliches Metropolen-Gefühl mit Sony Center und Staraufgebot während der Berlinale, während einzelne Kieze oftmals fast einen dörflichen Eindruck vermitteln. Als imposantes Ensemble beeindruckt das Berliner Kulturforum mit Einzelbauten, wie der Philharmonie oder der Neuen Nationalgalerie (z.Zt. in Renovierung) von Mies van de Rohe. Im Kunstgewerbemuseum erhalten Sie Einblick in die Meisterleistungen europäischer Entwurfs- und Objektkunst vom Mittelalter bis zum Art déco und am nördlichen Ende des Potsdamer Platzes warten im Gropiusbau spannende Wechselausstellungen in historischem Ambiente.
 
@@ -39,7 +39,7 @@ features:
     place: Eleganz am Ku’damm
     title: Eleganz mit Konzept
     description: >
-      Nach einer Stärkung in der Gourmetabteilung des berühmten KaDeWe geht es am Nachmittag auf dem Ku’damm weiter Richtung Gedächtniskirche und zur großzügigen Concept-Mall Bikini Berlin. Verglaste Fronten, riesige Panoramafenster, erfüllen den Traum einer Symbiose von Natur und Stadt. Sie geben den Blick auf das Tiergehege des Berliner Zoos frei, während gleichzeitig bekannte Designer ihre urbanen Kollektionen in Pop-Up-Stores, die in Form von kleinen Holzboxen gestaltet sind, zum Verkauf präsentieren.
+      Nach einer Stärkung in der Gourmetabteilung des berühmten KaDeWe geht es am Nachmittag auf dem Ku’damm weiter Richtung Gedächtniskirche und zur großzügigen Concept-Mall Bikini Berlin. Verglaste Fronten und riesige Panoramafenster erfüllen den Traum einer Symbiose von Natur und Stadt. Sie geben den Blick auf das Tiergehege des Berliner Zoos frei, während gleichzeitig bekannte Designer ihre urbanen Kollektionen in Pop-Up-Stores, die in Form von kleinen Holzboxen gestaltet sind, zum Verkauf präsentieren.
 
   - id: der-himmel-uber-berlin
     time: "15:00"
@@ -53,19 +53,19 @@ features:
     place: Dinner mit Style
     title: Die Torstraße
     description: >
-      Reservieren Sie einen Tisch im Cecconi’s auf der Torstraße, untergebracht im Soho House, Berlins bekanntesten und exklusivsten Private-Members-Club. Das italienische Restaurant im ehemaligen SED-Bau ist natürlich nicht nur für Mitglieder zugänglich. Es überzeugt mit hausgemachter Pasta, frischem Seafood und norditalienischen Köstlichkeiten der Spitzenklasse. Die Pizza aus dem Holzofen der offenen Küche schmeckt hervorragend und das Interieur begeistert mit stilvollem Marmorfußboden, roten Ledersofas und einer lässigen Terrasse für laue Sommerabende.
+      Reservieren Sie einen Tisch im Cecconi’s auf der Torstraße, untergebracht im Soho House, Berlins bekanntestem und exklusivstem Private-Members-Club. Das italienische Restaurant im ehemaligen SED-Bau ist natürlich nicht nur für Mitglieder zugänglich. Es überzeugt mit hausgemachter Pasta, frischem Seafood und norditalienischen Köstlichkeiten der Spitzenklasse. Die Pizza aus dem Holzofen der offenen Küche schmeckt hervorragend und das Interieur begeistert mit stilvollem Marmorfußboden, roten Ledersofas und einer lässigen Terrasse für laue Sommerabende.
 
   - id: die-szene-von-berlin-mitte
     time: "22:00"
     place: Die Szene von Berlin Mitte
     title: Geheimtipps
     description: >
-      Nehmen Sie einen Drink in der Bar 3, einem Geheimtipp der Kreativszene. Die puristische Bar bietet frisch gezapftes Bier und Cocktail-Klassiker, die direkt am Tresen getrunken werden, an.  Oder schlendern Sie weiter auf der Torstraße Richtung Neue Odessa Bar, wo sie in stilvollem Holzinterieur die berühmten Moscow Mules trinken sollten. Hier gilt: Sehen und gesehen werden. Unter der Woche ist das Ambiente recht casual, am Wochenende exklusiver und  mit Türsteher, dabei aber immer ein populärer Anlaufpunkt für unterschiedlichste Menschen. Die Musik macht Lust auf mehr und die Mode des Publikums gibt einen Einblick in den Stil Berlins.
+      Nehmen Sie einen Drink in der Bar 3, einem Geheimtipp der Kreativszene. Die puristische Bar bietet frisch gezapftes Bier und Cocktail-Klassiker, die direkt am Tresen getrunken werden, an. Oder schlendern Sie weiter auf der Torstraße Richtung Neue Odessa Bar, wo sie in stilvollem Holzinterieur die berühmten Moscow Mules trinken sollten. Hier gilt: Sehen und gesehen werden. Unter der Woche ist das Ambiente recht casual, am Wochenende exklusiver und  mit Türsteher, dabei aber immer ein populärer Anlaufpunkt für unterschiedlichste Menschen. Die Musik macht Lust auf mehr und die Mode des Publikums gibt einen Einblick in den Stil Berlins.
 
   - id: soundlandschaften-zum-schweben
     time: "00:00"
     place: Soundland&shy;schaften zum Schweben
     title: Rein ins Abenteuer
     description: >
-      Um den Berliner Techno voll auszukosten und in die Szene einzutauchen, empfehlen wir zu später Stunde das House of Weekend in einem ex-DDR-Prachtbau. Hier können Sie mit Roof Garden und minimalistischem Design in bizarr schöne Soundlandschaften eindringen. Oder Sie halten Ausschau nach internationalen DJ’s im Kater Blau oder Prince Charles in Kreuzberg und natürlich im weltberühmten Berghain. Die Berliner Musikwelt ist legendär und Liebhaber sämtlicher Stile kommen hier auf ihre Kosten: In Charlottenburg wartet mit dem A-Trane Berlins Jazzclub Nr. 1, im Tempodrom – dem Zirkuszelt aus Stahlbeton – treten internationale Stars sämtlicher Couleur auf und im Sommer können sich Sie in zahlreichen Beach- und Boatbars davon überzeugen, wie sehr Berlin auch Stadt am Wasser ist. Das einzigartige Nachtleben, die atemberaubenden Kontraste dieser aufregenden Stadt und ihre Geschichte werden Ihnen sicher lange in guter Erinnerung bleiben, aber Vorsicht: Suchtgefahr, eventuell wollen Sie hier gar nicht mehr weg.
+      Um den Berliner Techno voll auszukosten und in die Szene einzutauchen, empfehlen wir zu später Stunde das House of Weekend in einem ex-DDR-Prachtbau. Hier können Sie mit Roof Garden und minimalistischem Design in bizarr schöne Soundlandschaften eindringen. Oder Sie halten Ausschau nach internationalen DJ’s im Kater Blau oder Prince Charles in Kreuzberg und natürlich im weltberühmten Berghain. Die Berliner Musikwelt ist legendär und Liebhaber sämtlicher Stile kommen hier auf ihre Kosten: In Charlottenburg wartet mit dem A-Trane Berlins Jazzclub Nr. 1, im Tempodrom – dem Zirkuszelt aus Stahlbeton – treten internationale Stars sämtlicher Couleur auf und im Sommer können Sie sich in zahlreichen Beach- und Boatbars davon überzeugen, wie sehr Berlin auch Stadt am Wasser ist. Das einzigartige Nachtleben, die atemberaubenden Kontraste dieser aufregenden Stadt und ihre Geschichte werden Ihnen sicher lange in guter Erinnerung bleiben, aber Vorsicht: Suchtgefahr, eventuell wollen Sie hier gar nicht mehr weg.
 ---
