--- a/_pages/city-guides/hamburg/index.html
+++ b/_pages/city-guides/hamburg/index.html
@@ -25,7 +25,7 @@ features:
     place: HafenCity
     title: Moin Hamburg!
     description: >
-      Hamburg ist eine Stadt, in der die Gegensätze nahe beieinander liegen. Bei einem Spaziergang durch die Speicherstadt und Hafencity erleben Sie moderne Architektur und kulturelles Erbe gleichermaßen. Kaum zu übersehen: Die imposante Elbphilharmonie, von deren Plaza sich ein Panoramablick zu den historischen Schiffen vor den Sandtorhallen oder die Kräne im geschäftigen Hafen bietet.” Schiffe gucken” gehört zu einem Besuch in Hamburg einfach dazu. Im Kesselhaus in der Speicherstadt informiert eine Ausstellung umfassend über das Projekt “HafenCity” und Führungen und Veranstaltungen bringen Sie auf den neuesten Stand des größten innerstädtischen Stadtentwicklungsprojekts in Europa.
+      Hamburg ist eine Stadt, in der die Gegensätze nahe beieinander liegen. Bei einem Spaziergang durch die Speicherstadt und Hafencity erleben Sie moderne Architektur und kulturelles Erbe gleichermaßen. Kaum zu übersehen: Die imposante Elbphilharmonie, von deren Plaza sich ein Panoramablick zu den historischen Schiffen vor den Sandtorhallen oder die Kräne im geschäftigen Hafen bietet. ”Schiffe gucken” gehört zu einem Besuch in Hamburg einfach dazu. Im Kesselhaus in der Speicherstadt informiert eine Ausstellung umfassend über das Projekt “HafenCity” und Führungen und Veranstaltungen bringen Sie auf den neuesten Stand des größten innerstädtischen Stadtentwicklungsprojekts in Europa.
 
   - id: das-alte-madchen
     time: "12:00"
@@ -57,7 +57,7 @@ features:
 
   - id: du-musst-mal-wieder-wieder-nach-st-pauli-geh-n
     time: "22:00"
-    place: "Du musst mal wieder, wieder nach <br class=\"desktop-break\">St. Pauli geh'n"
+    place: Du musst mal wieder nach St.&nbsp;Pauli geh'n
     title: Verzaubern lassen
     description: >
       Wir bleiben in St. Pauli, denn jetzt zieht es uns in die clockers Bar: Von außen eher unscheinbar, ist man nach einem Besuch nachhaltig beeindruckt – und das liegt nicht nur an den Spirituosen aus eigener Herstellung. Auch das Ambiente wird Sie begeistern. Probieren Sie unbedingt den leckeren Gin und lassen Sie sich von der warmen Atmosphäre mitten im Kiez verzaubern, bevor Sie dann weiter in das Nachtleben um die Reeperbahn eintauchen. Wir wünschen viel Spaß beim Treiben lassen und sagen “Moin!”.
