--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -22,7 +22,7 @@ features:
     title: Treehotel
     location: Harads, Schweden
     description: >
-      Hoch im Norden in den schwedischen Wäldern warten sieben individuell gestaltete Unterkünfte in den Bäumen auf Gäste. Das extravagante Design fügt sich spielerisch in die Umgebung ein – und spiegelt im Wortsinn die Wildnis wider. Teilweise so avantgardistisch, dass sich keiner des Eindrucks erwehren kann, in Wahrheit in einer Traumlandschaft zu weilen. Typisch skandinavischer Minimalismus in der Einrichtung, bodentiefe Fenster und der faszinierende Ausblick in die umliegenden Wälder, die trotz der beeindruckenden Architektur der Baumhäuser immer Hauptattraktion bleiben – willkommen im Treehotel.
+      Hoch im Norden in den schwedischen Wäldern warten sieben individuell gestaltete Unterkünfte in den Bäumen auf Gäste. Das extravagante Design fügt sich spielerisch in die Umgebung ein – und spiegelt im Wortsinn die Wildnis wider. Teilweise so avantgardistisch, dass sich keiner des Eindrucks verwehren kann, in Wahrheit in einer Traumlandschaft zu weilen. Typisch skandinavischer Minimalismus in der Einrichtung, bodentiefe Fenster und der faszinierende Ausblick in die umliegenden Wälder, die trotz der beeindruckenden Architektur der Baumhäuser immer Hauptattraktion bleiben – willkommen im Treehotel.
 
   - id: the-siam
     title: The Siam
@@ -64,7 +64,7 @@ features:
     title: Awasi Patagonien
     location: Magallanes, Chile
     description: >
-      Patagonien steht für Abgeschiedenheit und rauhe, windumtoste Landschaft. Im Awasi Patagonia wird Abenteuer neu interpretiert und wirklich klar, welche Bedeutungstiefe dem Wort Alltagsflucht in der Realität tatsächlich gegeben werden kann. Mit Understatement präsentiert das Awawi kubistisch anmutende Villen mit klarer Linienführung entlang eines Berghangs in einem riesigen Privatreservat. Ökologische Nachhaltigkeit steht an zentraler Stelle und dem intensiven Naturerlebnis nichts im Wege: Gästen jeder Villa wird morgendlich ein privater Guide mit Geländewagen zur Verfügung gestellt, der bei der Planung der Tagesabenteuer in unglaublichem Panorama zur Seite steht.
+      Patagonien steht für Abgeschiedenheit und raue, windumtoste Landschaft. Im Awasi Patagonia wird Abenteuer neu interpretiert und wirklich klar, welche Bedeutungstiefe dem Wort Alltagsflucht in der Realität tatsächlich gegeben werden kann. Mit Understatement präsentiert das Awawi kubistisch anmutende Villen mit klarer Linienführung entlang eines Berghangs in einem riesigen Privatreservat. Ökologische Nachhaltigkeit steht an zentraler Stelle und dem intensiven Naturerlebnis nichts im Wege: Gästen jeder Villa wird morgendlich ein privater Guide mit Geländewagen zur Verfügung gestellt, der bei der Planung der Tagesabenteuer in unglaublichem Panorama zur Seite steht.
 
   - id: deplar-farm
     title: Deplar Farm
