--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -6,7 +6,7 @@ nav-title: Lexus UX
 nav-order: 6
 
 title: Den neuen Lexus&nbsp;UX erleben
-intro: Entdecken Sie den Lexus&nbsp;UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Design begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt probefahren und den Stil des Luxus von heute mit einem Lexus&nbsp;UX entdecken.
+intro: Entdecken Sie den Lexus&nbsp;UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt probefahren und modernen Luxus mit einem Lexus&nbsp;UX entdecken.
 
 intro-links:
 
@@ -38,19 +38,19 @@ features:
   - id: performance
     title: Leistung auf neuem Level
     description: >
-      Sportlich-konturierte Sitze mit In-Control-Position für den Fahrer und ein niedriger Schwerpunkt mit stabilem Fahrwerk für agiles Fahrverhalten bei hoher Laufruhe sorgen für Coupé-Feeling an Bord dieses kompakten SUV, ideal für den Stadtverkehr. Der neue Lexus&nbsp;UX verbindet das aufregend unaufgeregte Gefühl von elektronischem Allrad-Antrieb mit dem Erlebnis der Effizienz der nächsten Automobilgeneration. Und mit einem Mindestverbrauch von 4.1 L/km bleibt mehr für das gewissen Extra an Luxus auf dem nächsten Städtetrip.
+      Sportliche Sitze mit In-Control-Position für den Fahrer und ein niedriger Schwerpunkt mit stabilem Fahrwerk für agiles Fahrverhalten bei hoher Laufruhe sorgen für Coupé-Feeling an Bord dieses kompakten SUV ... ideal für den Stadtverkehr. Der neue Lexus&nbsp;UX verbindet das aufregend unaufgeregte Gefühl von elektronischem Allrad-Antrieb mit der Effizienz der nächsten Automobilgeneration: Und mit einem Mindestverbrauch von 4.1 L/km bleibt mehr für das gewisse Extra an Luxus auf dem nächsten Städtetrip.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: design
     title: Intelligentes Design
     description: >
-      Dramatisch elegant und mit viel Persönlichkeit: der Lexus&nbsp;UX ist durch seine sportliche Silhoutte, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit dieser innovativ gestaltete Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
+      Dramatisch elegant und mit viel Persönlichkeit: der Lexus&nbsp;UX ist durch seine sportliche Silhouette, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit dieser innovativ gestalteten Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: city
     title: Perfekt für die Stadt
     description: >
-      Der Lexus&nbsp;UX verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert durch das japanisches Architekturprinzip Engawa, womit Innen und Außen nahtlos miteinander verbunden werden. Das clevere Design ermöglicht es, die Größe des Fahrzeugs intuitiv aus der Fahrerposition zu erfassen und garantiert leichte Manövrierbarkeit in der Stadt.
+      Der Lexus&nbsp;UX verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert durch das japanische Architekturprinzip Engawa, womit Innen und Außen nahtlos miteinander verbunden werden. Das clevere Design ermöglicht es, die Größe des Fahrzeugs intuitiv aus der Fahrerposition zu erfassen und garantiert leichte Manövrierbarkeit in der Stadt.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: technology
@@ -62,7 +62,7 @@ features:
   - id: saftey
     title: Fortschritt mit Umsicht und Sicherheit
     description: >
-      Ein fortschrittliches Lexus Safety System+ der 2. Generation schützt Sie und Ihre Mitfahrer mit Funktionen wie dem Dynamic-Radar, Cruise-Control mit Straßenschild-Assistent, Pre-Collision-System und Spurhalteassistent. Durch die Ergänzung und Stärkung Ihrer fahrerischen Fähigkeiten verbessert das Lexus Safety System+ Ihre Sinne, sodass Sie sich auf allen bevorstehenden Reise immer sicher fühlen.
+      Ein fortschrittliches Lexus Safety System+ der 2. Generation schützt Sie und Ihre Mitfahrer mit Funktionen wie dem Dynamic-Radar, Cruise-Control mit Straßenschild-Assistent, Pre-Collision-System und Spurhalteassistent. Durch die Ergänzung und Stärkung Ihrer fahrerischen Fähigkeiten verbessert das Lexus Safety System+ Ihre Sinne, sodass Sie sich auf allen bevorstehenden Reisen immer sicher fühlen.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: config
