--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,18 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Den neuen Lexus&nbsp;UX erleben
-intro: Entdecken Sie den Lexus&nbsp;UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt probefahren und modernen Luxus mit einem Lexus&nbsp;UX entdecken.
+title: Erleben Sie den neuen Lexus&nbsp;UX Hybrid
+
+banner:
+  content: >
+    <div class="container container--no-padding">
+      <div class="width--lg">
+        <h1 class="banner-title">Erleben Sie den neuen Lexus&nbsp;UX Hybrid</h1>
+      </div>
+    </div>
+
+intro: >
+  Stadtentdecker aufgepasst: Der neue Lexus&nbsp;UX Hybrid bringt die Energie der Zukunft auf die Straße. Erleben Sie einen faszinierenden Mix aus elegantem Design, modernem Luxus und intelligenten Technologien für Ihren nächsten Städte-Roadtrip. Fahren Sie bis zu 50% der Zeit rein elektrisch ohne Aufladen und erleben Sie den urbanen Lifestyle von morgen – kompromisslos effizient und nachhaltig. Jetzt Probe fahren.
 
 intro-links:
 
@@ -30,45 +40,45 @@ feature-cta: Mehr entdecken
 features:
 
   - id: self-charge
-    title: Kein Aufladen. Kein Diesel. Keine Kompromisse.
+    title: Hybriderlebnis auf einem neuen Level
     description: >
-      Der Lexus&nbsp;UX lädt sich während der Fahrt selbstständig auf. Es müssen keine externen Ladestationen angefahren werden, es gibt keine Unterbrechungen auf Ihrer Reise. Ihre Fahrt wird mit der 4. Generation des Lexus-Hybridantriebs aus selbstladend hocheffizientem Elektromotor mit neu entwickelter Hybridschaltung und 4-Zylinder-Benzinmotor mit 2 Litern Hubraum auf sportlichen 178 PS zum Erlebnis.
+      Der neue Lexus&nbsp;UX Hybrid lädt sich während der Fahrt selbsttätig auf. Ohne Stopp an externen Ladestationen bringt er sie mühelos von Sonnenaufgang zu Sonnenaufgang durch die Stadt. Die 4. Generation des Lexus Hybridantriebs kombiniert einen hocheffizienten Elektromotor mit einem kraftvollen 2,0 l-Benzinmotor zu einem Fahrerlebnis voller Dynamik und Laufruhe. Angetrieben von sportlichen 184 PS.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: performance
-    title: Leistung auf neuem Level
+    title: Sportlich, agil, urban
     description: >
-      Sportliche Sitze mit In-Control-Position für den Fahrer und ein niedriger Schwerpunkt mit stabilem Fahrwerk für agiles Fahrverhalten bei hoher Laufruhe sorgen für Coupé-Feeling an Bord dieses kompakten SUV ... ideal für den Stadtverkehr. Der neue Lexus&nbsp;UX verbindet das aufregend unaufgeregte Gefühl von elektronischem Allrad-Antrieb mit der Effizienz der nächsten Automobilgeneration: Und mit einem Mindestverbrauch von 4.1 L/km bleibt mehr für das gewisse Extra an Luxus auf dem nächsten Städtetrip.
+      Souverän wie ein SUV, agil wie ein Coupé, ideal für den Stadtverkehr. Der neue Lexus&nbsp;UX Hybrid verfügt über die innovative GA-C Plattform, die eine verwindungssteife Karosserie mit einem extrem niedrigen Fahrzeugschwerpunkt vereint. Das Ergebnis: Extrem agiles Fahrverhalten und hohe Fahrstabilität, sportliches Handling und der kleinste Wendekreis seiner Klasse.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: design
     title: Intelligentes Design
     description: >
-      Dramatisch elegant und mit viel Persönlichkeit: der Lexus&nbsp;UX ist durch seine sportliche Silhouette, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit dieser innovativ gestalteten Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
+      Der Lexus&nbsp;UX zieht alle Blicke auf sich. Markante Linien, der unverwechselbare Diabolo-Kühlergrill an der athletischen Front, die sportliche Breitenbetonung und der niedrige Schwerpunkt schaffen einen Anblick, der Athletik und Eleganz vereint. Aerodynamische Innovationen an Radhäusern und Heckleuchten minimieren zudem den Fahrzeugauftrieb und erhöhen die Fahrstabilität bei hohen Geschwindigkeiten und Seitenwind.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: city
     title: Perfekt für die Stadt
     description: >
-      Der Lexus&nbsp;UX verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert durch das japanische Architekturprinzip Engawa, womit Innen und Außen nahtlos miteinander verbunden werden. Das clevere Design ermöglicht es, die Größe des Fahrzeugs intuitiv aus der Fahrerposition zu erfassen und garantiert leichte Manövrierbarkeit in der Stadt.
+      Der neue Lexus&nbsp;UX Hybrid verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert vom japanischen Engawa-Design, das Innen- und Außendesign scheinbar nahtlos ineinander übergehen lässt. Dadurch kann der Fahrer die Abmessungen des Fahrzeugs intuitiv erfassen, was die  Manövrierbarkeit des UX in der Stadt optimiert.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: technology
-    title: Innovation mit Imagination
+    title: Innovativer Komfort
     description: >
-      Ein Panoramablick-Monitor erzeugt mit vier Videokameras einen 360-Grad-Blick um das Auto und auf die Umgebung. Mit dem integrierten Qi-kompatiblen, kabellosen Ladegerät stören keine Kabel mehr: Das Aufladen von Smartphones ist einfach über das Ladegerät möglich. So sind Sie für alle Arten von urbanen Erkundungen bereit.
+      Das mit 10,3 Zoll größte Display seiner Klasse bietet Ihnen hochauflösende Bilder der vier am Fahrzeug platzierten Kameras. Das Ergebnis ist eine perfekte 360° Rundum-Sicht auf die Fahrzeugumgebung für komfortables Manövrieren und Einparken. Die induktive Ladestation ermöglicht unterwegs das kabellose Laden eines kompatiblen Smartphones – durch einfaches Auflegen des Geräts in die Ladeschale.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: saftey
-    title: Fortschritt mit Umsicht und Sicherheit
+    title: Denkt mit, schaut voraus
     description: >
-      Ein fortschrittliches Lexus Safety System+ der 2. Generation schützt Sie und Ihre Mitfahrer mit Funktionen wie dem Dynamic-Radar, Cruise-Control mit Straßenschild-Assistent, Pre-Collision-System und Spurhalteassistent. Durch die Ergänzung und Stärkung Ihrer fahrerischen Fähigkeiten verbessert das Lexus Safety System+ Ihre Sinne, sodass Sie sich auf allen bevorstehenden Reisen immer sicher fühlen.
+      Mit der neuen Generation des Lexus Safety System+ bietet der UX ein leistungsstarkes Paket an innovativen Fahrerassistenzsystemen wie Pre Crash Safety-System mit Fußgängererkennung, Spurhalteassistent mit Spurverlassenswarner, Fernlichtassistent mit automatischem Abblendlicht, eine Adaptive Geschwindigkeitsregelung sowie eine automatische Verkehrszeichenerkennung.
     link: https://www.lexus.de/car-models/ux/#hero
 
   - id: config
-    title: Konfigurieren
+    title: Jetzt konfigurieren
     description: >
-      Gestalten Sie Ihre Lexus-Erfahrung mit vielfältigen Optionen – auch der dynamische F&nbsp;SPORT ist dabei. Stellen Sie Ihr Traumauto jetzt online selbst zusammen.
+      Gestalten Sie den Lexus&nbsp;UX Hybrid, der zu Ihren individuellen Vorstellungen passt – wählen Sie aus attraktiven Ausstattungslinien und einer Fülle an innovativen, komfortablen Features.
     link: https://carconfig.lexus.de/de/de/?UX/de6de334-f17f-49c6-b814-526e3c7b8147/grades&models
     open-in-tab: true
 ---
