--- a/_pages/competition/index.html
+++ b/_pages/competition/index.html
@@ -7,38 +7,38 @@ no-test-drive-promo: true
 
 title: Competition
 long-title: Win your very own design escape
-intro: Enter below to win a luxurious design break in the UK. You’ll have the chance to choose between two gorgeous hotels – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel to your style. You’ll have use of the new Lexus UX Self-Charging Hybrid to complete your design escape.
+intro: Enter below to win a luxurious design break in the UK. Tell us about your perfect urban adventure and the type of style you go for – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel and urban escape to your look. You’ll have use of the new Lexus UX Self-Charging Hybrid to complete your design-forward getaway.
 enter-cta: Enter Now
 
 competition-form:
   post-url: https://getform.io/f/a3d29d52-2c3f-4ce4-aab2-53adaef7054d
-  expiry-date: 2019-03-23
+  expiry-date: 2019-10-23
   content:
     questions:
-      - id: colour
-        question: Which colour do you like?
+      - id: city
+        question: When you head to the city, do you look for sharp, angular and modern lines or the timeless appeal of old towns and heritage-oozing streets?
         answers:
-          - id: red
-            title: Red
-          - id: blue
-            title: Blue
-        statement: the colour [[result]]
-      - id: size
-        question: Do you like large or small?
+          - id: modern
+            title: Modern lines
+          - id: timeless
+            title: Timeless appeal
+        statement: a city with [[result]]
+      - id: style
+        question: You get to your stylish hotel – are you at home in a cosy, boutique style pad or totally into sleek, Scandi-style modernism?
         answers:
-          - id: large
-            title: Large
-          - id: small
-            title: Small
-        statement: a [[result]] size
-      - id: amount
-        question: Do you like 5 or 10?
+          - id: boutique
+            title: Boutique style
+          - id: modernism
+            title: Scandi-style modernism
+        statement: a hotel with [[result]]
+      - id: activity
+        question: You head into town; would we find you chatting with some local artisan about their cool boutique offerings or heading to that innovative rooftop bar with unmatched views and gorgeous cocktails?
         answers:
-          - id: five
-            title: 5
-          - id: ten
-            title: 10
-        statement: an amount of [[result]]
+          - id: shopping
+            title: Boutique offerings
+          - id: bar
+            title: Rooftop bars
+        statement: you like seeing [[result]]
     or: or
     statement:
       start: You like
