--- a/_pages/competition/entered/index.html
+++ b/_pages/competition/entered/index.html
@@ -3,6 +3,9 @@ layout: entered
 id: entered
 nav: false
 
-title: You've entered the competition
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, laudantium iste assumenda placeat, delectus sed incidunt! Quisquam nisi aut dolor blanditiis vitae quidem mollitia explicabo fugiat! Assumenda fuga repellendus cupiditate!
+title: You’ve successfully entered – good luck!
+intro: All you need to do now is sit back and discover a world of design in our bespoke city guides...
+cta:
+  text: Discover More
+  link: "{{site.baseurl}}/city-guides"
 ---
